# kis_test_package_c

./: CMakeLists.txt  CMakePresets.json  README.md  kis.package.cmake
cmake/: package_setup.cmake
main/include/kis_test_package_c/: kis_test_package_c.hpp
main/src/: kis_test_package_c.cpp
secondary/: CMakeLists.txt
secondary/tests/: test_package_c.test.cpp
